Send required as property of myact fields

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       {
         "name": "url",
         "label": "URL",
-        "type": "text"
+        "type": "text",
+        "required": true
       }
     ]
   },
